--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -467,7 +467,10 @@ Nereikia mokytis \textit{Python} programavimo kalbos, \textit{TensorFlow} biblio
 Užtenka įvaldyti VGSL kalbos sintaksines ypatybes, kad būtų įmanoma taisyklingai sudaryti neuroninį tinklą.
 
 \subsubsection{Bendrai apie LSTM}
-LSTM yra 
+LSTM yra rekurentinio neuroninio tinklo architektūra naudojama gilaus mokymosi srityse.
+Skirtingai nuo standartinių „feedforward“ neuroninių tinklų, LSTM turi grįžtamuosius ryšius, kurie tai padaro „universaliu kompiuteriu“ 
+(t.y. galima skaičiuoti viską, ką gali Turingo mašina). LSTM neuroniniai tinklai gali apdoroti ne tik statinius objektus (paveikslėlius), 
+bet ir informacijos sekas (garso įrašas ar video įrašas). LSTM dažniausiai naudojama ranka rašyto teksto ar garso atpažinimui \cite{hochreiter1997long}.
 
 LSTM tinklo paslėptame rekurentiniame lygyje yra specialūs vienetai - atminties blokai.
 Atminties blokuose yra atminties ląstelių saugančių laikiną tinklo būseną pridedant dar specialius 
