--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -116,3 +116,15 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
   year={2014}
 }
 
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+
