--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -982,6 +982,19 @@ Vykdomos operacijos:
 
 \subsubsection{Mokymo statistika}
 
+\begin{minipage}{\linewidth}
+  \centering
+  \includegraphics[width=12cm]{char_stats.jpg}
+  \captionof{figure}{Simbolio klaidų kiekis mokymo metu}
+  \label{borders}
+\end{minipage}
+
+\begin{minipage}{\linewidth}
+  \centering
+  \includegraphics[width=12cm]{word_stats.jpg}
+  \captionof{figure}{Simbolio klaidų kiekis mokymo metu}
+  \label{borders}
+\end{minipage}
 
 
 
@@ -1085,17 +1098,9 @@ hierarchinis) sąrašo pavidalu. Darbo išvados turi atitikti darbo tikslą.
   \item AVX
   \item SIMD
   \item CTC - %https://en.wikipedia.org/wiki/Connectionist_temporal_classification
-  \item 
-  \item 
-  \item 
-  \item 
 \end{itemize}
 
 \appendix  % Priedai
-% Prieduose gali būti pateikiama pagalbinė, ypač darbo autoriaus savarankiškai
-% parengta, medžiaga. Savarankiški priedai gali būti pateikiami kompiuterio
-% diskelyje ar kompaktiniame diske. Priedai taip pat vadinami ir numeruojami.
-% Tekstas su priedais siejamas nuorodomis (pvz.: \ref{img:mlp}).
 
 \section{Programa skirta sugeneruoti .box failus}
 \lstinputlisting[language=Python,label=generate_line_box]{generate_line_box.py}
@@ -1108,27 +1113,5 @@ hierarchinis) sąrašo pavidalu. Darbo išvados turi atitikti darbo tikslą.
 
 \section{Programa atpažįstanti automobilio numerius}
 \lstinputlisting[language=Python,label=detect]{platesOCR.py}
-% \begin{figure}[H]
-%     \centering
-%     \includegraphics[scale=0.5]{img/MLP}
-%     \caption{Paveikslėlio pavyzdys}
-%     \label{img:mlp}
-% \end{figure}
-
-
-% \section{Eksperimentinio palyginimo rezultatai}
-% % tablesgenerator.com - converts calculators (e.g. excel) tables to LaTeX
-% \begin{table}[H]\footnotesize
-%   \centering
-%   \caption{Lentelės pavyzdys}
-%   {\begin{tabular}{|l|c|c|} \hline
-%     Algoritmas & $\bar{x}$ & $\sigma^{2}$ \\
-%     \hline
-%     Algoritmas A  & 1.6335    & 0.5584       \\
-%     Algoritmas B  & 1.7395    & 0.5647       \\
-%     \hline
-%   \end{tabular}}
-%   \label{tab:table example}
-% \end{table}
 
 \end{document}
