--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -491,7 +491,7 @@ Neuroninį tinklą sudaro:
 
 
 \begin{minipage}{\linewidth}
-  \includegraphics[width=12cm]{topology.png}
+  \includegraphics[width=10cm]{topology.png}
   \captionof{figure}{Neuroninio tinklo architektūra}
   \label{fig:test}
 \end{minipage}
@@ -1005,19 +1005,22 @@ Vykdomos operacijos:
 \end{itemize}
 
 \subsubsection{Mokymo statistika}
+Vykdant neuroninio tinklo apmokymą su maksimaliai 10.000 iteracijų, buvo pasiekti žemiau pavaizuoti rezultatai.
+Vieno simbolio atpažinimo klaidų kiekį mokymo metu galima pamatyti \ref{char_stats} pav.
+Vieno žodžio atpažinimo klaidų kiekį mokymo metu galima pamatyti \ref{word_stats} pav.
 
 \begin{minipage}{\linewidth}
   \centering
   \includegraphics[width=12cm]{char_stats.jpg}
   \captionof{figure}{Simbolio klaidų kiekis mokymo metu}
-  \label{borders}
+  \label{char_stats}
 \end{minipage}
 
 \begin{minipage}{\linewidth}
   \centering
   \includegraphics[width=12cm]{word_stats.jpg}
   \captionof{figure}{Simbolio klaidų kiekis mokymo metu}
-  \label{borders}
+  \label{word_stats}
 \end{minipage}
 
 
